2015-03-12  Alexey Proskuryakov  <ap@apple.com>

        testRunner.setAlwaysAcceptCookies does not work with NetworkProcess
        https://bugs.webkit.org/show_bug.cgi?id=138687

        Reviewed by Carlos Garcia Campos.

        Always change cookie policy from UI process, as changing it from WebProcess doesn't
        affect other processes.

        The implementation is imperfect, because the change happens asynchronously, but I
        don't expect it to be a problem in practice.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::setAlwaysAcceptCookies):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::invoke):
        (WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):

2015-03-12  Csaba Osztrogonác  <ossy@webkit.org>

        [EFL] Enable building EFL 1.13 with NEON support
        https://bugs.webkit.org/show_bug.cgi?id=142619

        Reviewed by Gyuyoung Kim.

        * efl/jhbuild.modules:

2015-03-11  Alex Christensen  <achristensen@webkit.org>

        [Content Extensions] Add resource type and load type triggers.
        https://bugs.webkit.org/show_bug.cgi?id=142422

        Reviewed by Benjamin Poulain.

        * TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
        (TestWebKitAPI::testRequest):
        (TestWebKitAPI::mainDocumentRequest):
        (TestWebKitAPI::TEST_F):
        (TestWebKitAPI::testURL): Deleted.

2015-03-10  Sam Weinig  <sam@webkit.org>

        Allow adding a button in input elements for auto fill related functionality
        <rdar://problem/19782066>
        https://bugs.webkit.org/show_bug.cgi?id=142564

        Reviewed by Anders Carlsson.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::createOtherPage):
        (WTR::TestController::createWebViewWithOptions):
        Update for new callback.
