@@ -1,3 +1,13 @@
+2015-03-12  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Remove isWK2 cruft from webkitdirs.pm after r170426
+        https://bugs.webkit.org/show_bug.cgi?id=142618
+
+        Reviewed by Daniel Bates.
+
+        * Scripts/webkitdirs.pm:
+        (isWK2): Deleted.
+
 2015-03-12  Alexey Proskuryakov  <ap@apple.com>
 
         testRunner.setAlwaysAcceptCookies does not work with NetworkProcess
